--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -6,16 +6,30 @@
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
 		<title>Astro Basics</title>
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
 	</head>
 	<body>
 		<slot />
 	</body>
 </html>
 
+<style is:global>
+	:root {
+		color-scheme: light dark;
+	}
+	.mono {
+		font-family: 'Space Mono', monospace;
+		font-size: 80%;
+	}
+</style>
+
 <style>
 	html,
 	body {
 		margin: 0;
+		background: light-dark(#ccc, #333);
 		width: 100%;
 		height: 100%;
 	}
