--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,7 @@
 ---
 import Layout from "../layouts/Layout.astro"
 import { PrismaClient } from "@prisma/client"
-import utils from "../server/utils"
+import { getNextIdForModel } from "../server/utils"
 
 const prisma = new PrismaClient()
 
@@ -11,19 +11,24 @@ if (Astro.request.method == "POST") {
 	if (message) {
 		await prisma.frontPageMessage.create({
 			data: {
-				id: await utils.getNextMessageId(),
+				id: await getNextIdForModel("Message"),
 				message: message as string
 			}
 		})
 	}
 	return Astro.redirect("/")
 }
-const messages = await prisma.frontPageMessage.findMany()
+const messages = await prisma.frontPageMessage.findMany({
+	orderBy: {
+		createdAt: "desc",
+	},
+	take: 10,
+})
+messages.reverse()
 ---
 
 <Layout>
 	<h1>The Content Driven Website</h1>
-	<p>Small edit to see if automatic deployment works #2</p>
 	<h3>Messages</h3>
 	<div style="border: 1px dashed red; padding: 1rem; display: flex; flex-direction: column; gap: 0.25rem;">
 		{messages.map(m => <span><a href=`message/${m.id}` class="mono" style="color: #a57549">{m.id}</a>: {m.message}</span>)}
