--- a/src/pages/message/[id].astro
+++ b/src/pages/message/[id].astro
@@ -22,6 +22,9 @@ if (!message) {
         <h1 class="mono" style="color: #a57549; font-size: 1.75rem;">
             {message.id.split("").map(c => c.match(/\d/) ? <span style="color: orangered">{c}</span> : c)}
         </h1>
+        <p style="opacity: 0.5;">
+            {message.createdAt.toLocaleString("en-GB", {day: "2-digit", month: "2-digit", year: "numeric", hour: "2-digit", minute: "2-digit"})}
+        </p>
         <p>
             {message.message}
         </p>
